# torq

./: README.md
demo_data/: obstacles.yaml  quad_params_nightwing.yaml  rand_waypoints_82_001.yaml  two_wayp.yaml
planner_comparison/: readme.txt  run_planners.py  test_data.py
planner_comparison/ESDFs/: readme.txt
planner_comparison/Results/: astro_198-B4_V3_03_data.data  astro_344_V1_03_data.data  astro_cyl_198-B4_ESDF_V3_03_data.data  astro_cyl_198-B4_V3_03_data.data  astro_cyl_344_V1_03_esdf_new_data.data  astro_cyl_344_V1_03_new_data.data  taco_198-B4_V3_03_data.data  unco_198-B4_V3_03_data.data  unco_344_V1_03_data.data
planner_comparison/SegTimes/: seg_times_astro_cyl_198-B4_V3_opt.pickle  seg_times_astro_cyl_344_V1_opt.pickle  seg_times_unco_198-B4_V3_opt.pickle  seg_times_unco_344_V1_opt.pickle  time_opt_times_astro_198-B4_V3_opt.pickle  time_opt_times_astro_cyl_198-B4_V3_opt.pickle  time_opt_times_astro_cyl_344_V1_opt.pickle  time_opt_times_unco_198-B4_V3_opt.pickle  time_opt_times_unco_344_V1_opt.pickle
px4_msgs/: CMakeLists.txt  package.xml
px4_msgs/msg/: PolyTraj.msg
sysid/: Dynamics.py  Estimator.py  FlightData.py  IO.py  Plot.py  main.py  main_estimate_drag.py  main_estimate_inertia.py  main_estimate_thrust.py  plot_main.py  plot_only.py
sysid/Results/: HorizontalFlight_log001_WLS_20171220-1900.yaml  RotationalFlight_log001_WLS_20171220-1925.yaml  VerticalFlight_log001_WLS_20171220-1845.yaml
torq_gcs/: .gitignore  CMakeLists.txt  package.xml  rviz_load_quad_mesh.py  setup.py
torq_gcs/config/: grid_only.rviz  race_conops.rviz  race_conops_old.rviz  unreal_viz.rviz  vis_344_traj.rviz
torq_gcs/nodes/: astro_no_rviz.py  camera_placement.py  positions_to_tf.py  race_conops.py  spatial_disc.py  taco_no_rviz.py  tf_to_positions.py  unco_no_rviz.py
torq_gcs/resource/disc/: RDP.ui  Spline.ui
torq_gcs/resource/fsp/: ESDF.ui
torq_gcs/resource/plan/: Astro.ui  FreespacePlan.ui  Minsnap.ui  Minsnap_old.ui
torq_gcs/src/torq_gcs/: __init__.py
torq_gcs/src/torq_gcs/disc/: __init__.py  line_simpl.py  spline.py
torq_gcs/src/torq_gcs/disc/tests/: test_line_simpl.py
torq_gcs/src/torq_gcs/fsp/: __init__.py  ros_helpers.py  voxblox_widgets.py
torq_gcs/src/torq_gcs/plan/: __init__.py  astro_plan.py  ros_helpers.py  taco.py  unco.py
torq_gcs/src/torq_gcs/plan/tests/: test_unco.py
torq_gcs/src/torq_gcs/viz/: __init__.py  ros_helpers.py  rviz_widgets.py
traj/: .gitignore  Makefile  README.md  requirements.txt  setup.py
traj/astro/: __init__.py  constraint.py  data_track.py  poly_astro.py  traj_qr.py  trajectory.py  (+1 more)
(+474 files in other folders)
